--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.11",
+    "chart.js": "^3.9.1",
     "firebase": "^11.4.0",
     "gsap": "^3.12.7",
     "lucide-vue-next": "^0.477.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
   },
