--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lucide-vue-next": "^0.477.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
   },
@@ -36,7 +36,7 @@
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
-    "tailwindcss": "^4.0.11",
+    "tailwindcss": "^4.0.14",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5"
