--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^4.0.14",
+    "terser": "^5.39.0",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5"
